Update juxtapose to 60e172321cdd3417a2299bf0371ad60140939504

--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -60,7 +60,7 @@
     </script>
 
     <script src="{{STATIC_URL}}juxtapose/loaders.css.js"></script>
-    <script src="{{STATIC_URL}}juxtapose/bundle-d.js"></script>
+    <script src="{{STATIC_URL}}juxtapose/bundle-e.js"></script>
 {% endblock %}
 
 {% block content %}
