--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -49,7 +49,7 @@
             isFaculty: {% if is_faculty %}true{% else %}false{% endif %},
             assignmentId: '{{assignment.id}}',
             responseId: '{{the_response.id}}',
-            submitted: {% if the_response and the_response.is_submitted %}true{% else %}false{% endif %},
+            readOnly: {% if the_response and the_response.is_submitted %}true{% else %}false{% endif %},
             {% if feedback %}
                 feedback: JSON.parse('{{feedback|escapejs}}'),
             {% endif %}
