--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -60,7 +60,7 @@
     </script>
 
     <script src="{{STATIC_URL}}juxtapose/loaders.css.js"></script>
-    <script src="{{STATIC_URL}}juxtapose/bundle-j.js"></script>
+    <script src="{{STATIC_URL}}juxtapose/bundle-k.js"></script>
 {% endblock %}
 
 {% block content %}
