--- a/mediathread/templates/projects/sequence_assignment_view.html
+++ b/mediathread/templates/projects/sequence_assignment_view.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load user_projects coursetags %}
+{% load waffle_tags %}
 
 {% block title %}
     {% if assignment.title %}{{assignment.title}}{% else %}New Assignment{% endif %}
@@ -84,8 +85,13 @@
         <div class="left small col-half">
             {% if assignment_can_edit %}
                 <div>
+                    {% flag "addressable_courses" %}
+                    <a href="{% url 'sequence-assignment-edit' course.pk assignment.id %}">
+                    {% else %}
                     <a href="{% url 'sequence-assignment-edit' assignment.id %}">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit Assignment
+                    {% endflag %}
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        Edit Assignment
                     </a>
                     &nbsp;|&nbsp;
                     <span class="metadata-value">
